--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation 'com.android.volley:volley:1.1.1'
+
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"  // Anko Commons
+    implementation "org.jetbrains.anko:anko-sdk23:$anko_version"
+    implementation "org.jetbrains.anko:anko-sdk23-coroutines:$anko_version"
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
